--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h1 {
 }
 
 
-/* Estilos del botón de hamburguesa */
+/*  hamburguesa */
 .menu-hamburguesa {
     cursor: pointer;
     width: 20px;
