--- a/CSS/index.css
+++ b/CSS/index.css
@@ -96,7 +96,7 @@ h3 {
     justify-content: space-between;
     align-items: center;
     padding: 5px 0;
-    color: white;
+    color: rgb(7, 7, 7);
 }
 
 .carrito-item button {
@@ -114,7 +114,7 @@ h3 {
 }
 
 .total-precio {
-    color: white;
+    color: rgb(8, 8, 8);
     font-size: 18px;
     font-weight: bold;
     margin-top: 10px;
